--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform= postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
